# Snowflake-Con

./: .gitignore  README.md  example_usage.py  pyproject.toml  requirements.txt  setup.py  test.ipynb
snowflake_connector/: __init__.py  connection.py  connection_manager.py  data_retriever.py  utils.py
